<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logotype"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:src="@drawable/delta"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delta_logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_logo"
            android:textAllCaps="true"
            android:textColor="@color/logo_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/logotype"
            app:layout_constraintLeft_toRightOf="@id/logotype"
            app:layout_constraintTop_toTopOf="@id/logotype" />

        <TextView
            android:id="@+id/passenger_static_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="28dp"
            android:text="@string/passenger_static_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logotype" />

        <TextView
            android:id="@+id/text_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/client_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/passenger_static_text"
            app:layout_constraintLeft_toRightOf="@id/passenger_static_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/passenger_static_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/middle_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="218dp"
        android:background="@color/blue_ticket_air"
        app:layout_constraintLeft_toLeftOf="@id/top_constraint_layout"
        app:layout_constraintRight_toRightOf="@id/top_constraint_layout"
        app:layout_constraintTop_toBottomOf="@+id/top_constraint_layout">


        <TextView
            android:id="@+id/first_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="33dp"
            android:text="@string/jfk_text"
            android:textColor="@color/white"
            android:textSize="44sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/second_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:text="@string/sea_text"
            android:textColor="@color/white"
            android:textSize="44sp"
            app:layout_constraintBottom_toBottomOf="@id/first_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/first_text" />


        <ImageView
            android:id="@+id/fly"
            android:layout_width="34dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_flight_icon"
            app:layout_constraintBottom_toBottomOf="@id/first_text"
            app:layout_constraintLeft_toRightOf="@id/first_text"
            app:layout_constraintRight_toLeftOf="@id/second_text"
            app:layout_constraintTop_toTopOf="@id/first_text" />

        <TextView
            android:id="@+id/third_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/new_york_city_text"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/first_text"
            app:layout_constraintTop_toBottomOf="@id/first_text" />

        <TextView
            android:id="@+id/four_text"
            android:layout_width="65dp"
            android:layout_height="13dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="38dp"
            android:text="DEPART"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/third_text"
            app:layout_constraintTop_toBottomOf="@+id/third_text" />

        <TextView
            android:id="@+id/five_text"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="37dp"
            android:text="@string/_8_00_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/four_text"
            app:layout_constraintTop_toBottomOf="@+id/four_text" />

        <TextView
            android:id="@+id/five_text_near"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginLeft="4dp"
            android:text="@string/am_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/five_text"
            app:layout_constraintLeft_toRightOf="@+id/five_text"

            />


        <TextView
            android:id="@+id/six_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="SEATTLE"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/third_text"
            app:layout_constraintLeft_toLeftOf="@id/second_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/third_text"

            />

        <TextView
            android:id="@+id/seven_text"
            android:layout_width="wrap_content"
            android:layout_height="13dp"
            android:layout_marginTop="27dp"
            android:layout_marginRight="38dp"
            android:text="ARRIVE"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/six_text"
            app:layout_constraintTop_toBottomOf="@+id/six_text" />


        <TextView
            android:id="@+id/eight_text"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="13dp"
            android:text="@string/_11_17_time"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="@+id/seven_text"
            app:layout_constraintTop_toBottomOf="@+id/seven_text" />


        <TextView
            android:id="@+id/nine_text"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="23dp"
            android:text="@string/am_text"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/eight_text"
            app:layout_constraintLeft_toRightOf="@+id/eight_text"


            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/middle_constraint_layout"
        app:layout_constraintRight_toRightOf="@id/middle_constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/middle_constraint_layout"
        app:layout_constraintVertical_bias="0.0">

        //QR CODE

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>